fixed navbar collapse toggle issue, made some display changes and some minor changes

--- a/portfolio/styles/style.css
+++ b/portfolio/styles/style.css
@@ -20,6 +20,10 @@
   text-align: center;
 }
 
+.nav-item {
+  margin-top: 4px;
+}
+
 .dark-mode {
   background-color: #252525;
   color: rgb(159, 162, 165);
@@ -137,12 +141,12 @@
   font-size: 20px;
 }
 
-.button {
+.project-button {
   display: inline-block;
   background-color: #336c8d;
   border: none;
   color: black;
-  padding: 15px 25px;
+  padding: 10px 20px;
   text-align: center;
   font-size: 16px;
   margin: 10px;
@@ -151,14 +155,14 @@
   border-radius: 8px;
 }
 
-.button span {
+.project-button span {
   cursor: pointer;
   display: inline-block;
   position: relative;
   transition: 0.5s;
 }
 
-.button span:after {
+.project-button span:after {
   content: '\00bb';
   position: absolute;
   opacity: 0;
@@ -167,22 +171,22 @@
   transition: 0.5s;
 }
 
-.button:hover span {
+.project-button:hover span {
   padding-right: 25px;
   text-decoration: none;
 }
 
-.button:hover span:after {
+.project-button:hover span:after {
   opacity: 1;
   right: 0;
 }
 
-.button:hover {
+.project-button:hover {
   background-color: #054574;
   color: white;
 }
 
-.button:link {
+.project-button:link {
   text-decoration: none;
   color: white;
 }
